--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
           DESRAMEAUX | DIGITAL EDITING AND ARRANGEMENT BY ANDREW COLEMAN AND MIKE LARSON
           FOR I AM OTHER ENTERTAINMENT | MIXED BY LESLIE BRATHWAITE AT MUSIC BOX STUDIOS,
           ATLANTA, GA.
-
         </p>
 
-        <!-- span text 'PHARRELLWILLIAMS.COM' -->
+        <span> PHARRELLWILLIAMS.COM </span>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
 
