Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
           ATLANTA, GA.
         </p>
 
-        <span> PHARRELLWILLIAMS.COM </span>
+        <span>PHARRELLWILLIAMS.COM</span>
 
         <img src="images/columbia-logo.png">
-        <!-- span text 'COLUMBIARECORDS.COM' -->
+
+        <span>COLUMBIARECORDS.COM</span>
 
         <br>
 
