Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <br>
 
-        <img src="images/columbia-logo.png">
+        <img src="images/sony-logo.png">
 
       </div>
     </div>
